--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-av": "~13.0.2",
     "expo-font": "~11.0.1",
     "expo-linear-gradient": "~12.0.1",
+    "expo-screen-capture": "~5.0.0",
     "expo-screen-orientation": "~5.0.1",
     "expo-secure-store": "~12.0.0",
     "expo-status-bar": "~1.4.2",
@@ -33,6 +34,8 @@
     "react-native-dropdownalert": "^4.5.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.2",
+    "react-native-sketch-canvas": "^1.0.103",
+    "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
